Added comments in the code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 logging.level.org.springframework.web: DEBUG
-## Note - Will be used by the actuator endpoint.
+## This is the port where the application exposes the rest API, in order to changed it, customize the property below.
 server.port = 8080
+## This is the port where the application exposes the observability endpoints, in order to changed it, customize the property below.
 management.server.port=9091
 ## Property to expose all end points (both sensitive and non-sensitive)
 ## By default only "health" and "info" endpoints are enabled.
